[gd_scene load_steps=35 format=2]

[ext_resource path="res://Assets/Player/Bandit/Heavy Bandit/Idle/HeavyBandit_Idle_3.png" type="Texture" id=1]
[ext_resource path="res://Assets/Player/Bandit/Heavy Bandit/Idle/HeavyBandit_Idle_0.png" type="Texture" id=2]
[ext_resource path="res://Assets/Player/Bandit/Heavy Bandit/Idle/HeavyBandit_Idle_1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Player/Bandit/Heavy Bandit/Idle/HeavyBandit_Idle_2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Player/Bandit/Heavy Bandit/Run/HeavyBandit_Run_5.png" type="Texture" id=5]
[ext_resource path="res://Assets/Player/Bandit/Heavy Bandit/Run/HeavyBandit_Run_6.png" type="Texture" id=6]
[ext_resource path="res://Assets/Player/Bandit/Heavy Bandit/Run/HeavyBandit_Run_0.png" type="Texture" id=7]
[ext_resource path="res://Assets/Player/Bandit/Heavy Bandit/Run/HeavyBandit_Run_3.png" type="Texture" id=8]
[ext_resource path="res://Scripts/Bandit/Bandit.gd" type="Script" id=9]
[ext_resource path="res://Assets/Player/Bandit/Heavy Bandit/Run/HeavyBandit_Run_2.png" type="Texture" id=10]
[ext_resource path="res://Assets/Player/Bandit/Heavy Bandit/Run/HeavyBandit_Run_7.png" type="Texture" id=11]
[ext_resource path="res://Assets/Player/Bandit/Heavy Bandit/Run/HeavyBandit_Run_4.png" type="Texture" id=12]
[ext_resource path="res://Assets/Player/Bandit/Heavy Bandit/Run/HeavyBandit_Run_1.png" type="Texture" id=13]
[ext_resource path="res://Assets/Player/Bandit/Heavy Bandit/Jump/HeavyBandit_Jump_0.png" type="Texture" id=14]
[ext_resource path="res://Shader/outline2D.tres" type="Material" id=15]
[ext_resource path="res://Assets/Player/Bandit/Heavy Bandit/Attack/HeavyBandit_Attack_2.png" type="Texture" id=16]
[ext_resource path="res://Assets/Player/Bandit/Heavy Bandit/Attack/HeavyBandit_Attack_6.png" type="Texture" id=17]
[ext_resource path="res://Assets/Player/Bandit/Heavy Bandit/Attack/HeavyBandit_Attack_4.png" type="Texture" id=18]
[ext_resource path="res://Assets/Player/Bandit/Heavy Bandit/Attack/HeavyBandit_Attack_1.png" type="Texture" id=19]
[ext_resource path="res://Assets/Player/Bandit/Heavy Bandit/Attack/HeavyBandit_Attack_5.png" type="Texture" id=20]
[ext_resource path="res://Assets/Player/Bandit/Heavy Bandit/Attack/HeavyBandit_Attack_7.png" type="Texture" id=21]
[ext_resource path="res://Assets/Player/Bandit/Heavy Bandit/Attack/HeavyBandit_Attack_3.png" type="Texture" id=22]
[ext_resource path="res://Assets/Player/Bandit/Heavy Bandit/Attack/HeavyBandit_Attack_0.png" type="Texture" id=23]
[ext_resource path="res://Assets/Player/Bandit/Heavy Bandit/Recover/HeavyBandit_Recover_5.png" type="Texture" id=24]
[ext_resource path="res://Assets/Player/Bandit/Heavy Bandit/Recover/HeavyBandit_Recover_1.png" type="Texture" id=25]
[ext_resource path="res://Assets/Player/Bandit/Heavy Bandit/Recover/HeavyBandit_Recover_3.png" type="Texture" id=26]
[ext_resource path="res://Assets/Player/Bandit/Heavy Bandit/Recover/HeavyBandit_Recover_4.png" type="Texture" id=27]
[ext_resource path="res://Assets/Player/Bandit/Heavy Bandit/Recover/HeavyBandit_Recover_0.png" type="Texture" id=28]
[ext_resource path="res://Assets/Player/Bandit/Heavy Bandit/Recover/HeavyBandit_Recover_7.png" type="Texture" id=29]
[ext_resource path="res://Assets/Player/Bandit/Heavy Bandit/Recover/HeavyBandit_Recover_6.png" type="Texture" id=30]
[ext_resource path="res://Assets/Player/Bandit/Heavy Bandit/Recover/HeavyBandit_Recover_2.png" type="Texture" id=31]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ ExtResource( 29 ), ExtResource( 30 ), ExtResource( 24 ), ExtResource( 27 ), ExtResource( 26 ), ExtResource( 31 ), ExtResource( 25 ), ExtResource( 28 ) ],
"loop": false,
"name": "dead",
"speed": 8.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 19 ), ExtResource( 16 ), ExtResource( 22 ), ExtResource( 18 ), ExtResource( 20 ), ExtResource( 17 ), ExtResource( 21 ) ],
"loop": true,
"name": "attack",
"speed": 14.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "jump",
"speed": 3.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 13 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 12 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 11 ) ],
"loop": true,
"name": "run",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.4115, 3.20838 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8.0331, 19.1976 )

[node name="Bandit" type="KinematicBody2D"]
scale = Vector2( -2, 2 )
script = ExtResource( 9 )

[node name="AnimSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 15 )
frames = SubResource( 1 )
animation = "idle"
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.625, 18.375 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="HurtBox" type="Area2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 1, 2 )
shape = SubResource( 3 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="SwordHit" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -20, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="ScanBox" type="Area2D" parent="SwordHit"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SwordHit/ScanBox"]
polygon = PoolVector2Array( -6.21906, -0.719353, -21.1963, -16.8566, -20.2513, 22.9884 )

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.35
one_shot = true

[node name="IdleTimer" type="Timer" parent="."]
one_shot = true

[node name="PatrolPoints" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="A" type="Node2D" parent="PatrolPoints"]
position = Vector2( -107.5, 0 )

[node name="B" type="Node2D" parent="PatrolPoints"]
position = Vector2( 91, 0 )

[node name="ViewArea" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ViewArea"]
polygon = PoolVector2Array( -4.80913, -9.07915, -107.818, -20.691, -107.069, 21.2616 )
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="body_entered" from="SwordHit/ScanBox" to="." method="_on_ScanBox_body_entered"]
[connection signal="body_exited" from="SwordHit/ScanBox" to="." method="_on_ScanBox_body_exited"]
[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
